--- a/web-flair/app/sass/blocks/product-info/_product-info.sass
+++ b/web-flair/app/sass/blocks/product-info/_product-info.sass
@@ -195,5 +195,63 @@
 		stroke: #A9BCCA
 		stroke-width: 3
 
-
-	
+ul.product-info-tabs
+  border-bottom: 1px solid #DDDDDD
+  display: block
+  margin: 0 0 20px
+  padding: 0
+  li
+    display: block
+    float: left
+    height: 30px
+    margin-bottom: 0
+    padding: 0
+    width: auto
+    a
+      background: none repeat scroll 0 0 #F5F5F5
+      border-color: #DDDDDD !important
+      border-style: solid
+      border-width: 1px 1px 0 1px
+      display: block
+      font-size: 13px
+      height: 29px
+      line-height: 30px
+      margin: 0
+      padding: 0 20px
+      text-decoration: none
+      width: auto
+      color: #303030
+      border-bottom: none !important
+      &.active
+        background: none repeat scroll 0 0 #FFFFFF
+        border-left-width: 1px
+        border-top-left-radius: 2px
+        border-top-right-radius: 2px
+        color: #111111
+        height: 30px
+        margin: 0 0 0 -1px
+        padding-top: 4px
+        position: relative
+        top: -4px
+    &:first-child a
+      &.active
+        margin-left: 0
+      border-top-left-radius: 2px
+      border-width: 1px 1px 0
+    &:last-child a
+      border-top-right-radius: 2px
+  &:before
+    content: " "
+    display: block
+    height: 0
+    overflow: hidden
+    visibility: hidden
+    width: 0
+  &:after
+    content: " "
+    display: block
+    height: 0
+    overflow: hidden
+    visibility: hidden
+    width: 0
+    clear: both
