--- a/sections/sustainability.liquid
+++ b/sections/sustainability.liquid
@@ -9,6 +9,7 @@
 			</div>	
 
 			{%- include "sustainability_mobile" -%}	
+			{%- include "sustainability_desktop" -%}	
 
 
 			<!--<div class="row">
